--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ padding: 10px;
     width: 350px;
 }
 
-#items .items {
+#items .item {
     display: flex;
     padding: 10px;
     margin: 15px 0;
